# GAME-SDL-STRATEGY-Toppler

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.tools  README  README.md  archi.cc  archi.h  assembler.c  autogen.sh  bonus.cc  bonus.h  colorreduction.c  colorreduction.h  configuration.cc  configuration.h  configure.ac  configure.in  crearc.c  cremission.cc  cross.c  decl.cc  decl.h  dude.c  dude.xcf  elevators.cc  elevators.h  font.c  font.xcf  game.cc  game.h  graphics.c  graphics_brick.xcf  graphics_pinacle.xcf  highscore.cc  highscore.h  key.txt  keyb.cc  keyb.h  (+54 more)
ball1/: lev1  lev2  lev3  lev4  lev5  lev6  lev7  lev8
ball3/: lev4  lev7  lev8
cross_pov/: cross.ini  cross.pov
datafile/: README  crearc.c  crearc.cpp  graphics.c  menu.c  scroller.xcf  sprites.c  titles.xcf
datafile/levels/: cremission.cc
datafile/menu_pov/: menu.ini  menu.pov  tower2inc.cc
datafile/sprites_pov/: environment.pov
datafile/sprites_pov/balls/: obj.ini
datafile/sprites_pov/box/: obj.ini  obj.pov
datafile/sprites_pov/robot0/: obj.ini  obj.pov
datafile/sprites_pov/robot2/: obj.pov
datafile/sprites_pov/robot4/: obj.pov
datafile/sprites_pov/robot5/: obj.pov
datafile/sprites_pov/robot7/: obj.pov
datafile/sprites_pov/snowball/: obj.ini  obj.pov
datafile/submarine/: nebu_sub.blend
datafile/submarine/render/: 0001.tga  0002.tga  0003.tga  0004.tga  0005.tga  0006.tga  0007.tga  0008.tga  0009.tga  0010.tga  0011.tga  0012.tga  0013.tga  0014.tga  0015.tga  0016.tga  0017.tga  0018.tga  0019.tga  0020.tga  0021.tga  0022.tga  0023.tga  0024.tga  0025.tga  0026.tga  0027.tga  0028.tga  0029.tga  0030.tga  0031.tga  0032.tga  0033.tga  0034.tga  0035.tga  0036.tga  0037.tga  0038.tga  0039.tga  0040.tga  (+32 more)
david1/: lev1
debian/: changelog  control.in  copyright.in  menu.in  rules
doc/: changelog.md
kallinen1/: t1  t2  t3  t4  t5  t6  t7  t8
kallinen2/: t2
levels/: cremission.cc  m1t1.txt  m1t2.txt  m1t3.txt  m1t4.txt  m1t5.txt  m1t6.txt  m1t7.txt  m1t8.txt  m2t1.txt  m2t2.txt  m2t3.txt  m2t4.txt  m2t5.txt  m2t6.txt  m2t7.txt  m2t8.txt
menu_pov/: Makefile  menu.pov  tower2inc.cc  turm1.inc  turm2.inc  turm3.inc  turm4.inc  turm5.inc  turm6.inc  turm7.inc  turm8.inc
mission1/: m1t1  m1t2  m1t3  m1t4  m1t5  m1t6  m1t7  m1t8
mission2/: m2t1  m2t2  m2t3  m2t4  m2t5  m2t6  m2t7  m2t8
po/: POTFILES  cs.po  de.po  eu.po  fi.po  fr.po  pt.po  ro.po  sv.po
sprites_pov/: environment.pov
sprites_pov/balls/: obj.pov
sprites_pov/robot0/: obj.pov
sprites_pov/robot1/: obj.ini  obj.pov
sprites_pov/robot2/: obj.pov  txt.inc
sprites_pov/robot3/: obj.pov
sprites_pov/robot4/: obj.ini  obj.pov
sprites_pov/robot5/: obj.pov
sprites_pov/robot6/: obj.pov  txt.inc
sprites_pov/robot7/: obj.pov
src/: archi.cc  archi.h  autogen.sh  bonus.cc  configuration.cc  configuration.h  decl.cc  decl.h  elevators.cc  game.cc  game.h  highscore.cc  keyb.cc  level.cc  level.h  leveledit.cc  main.cc  menu.cc  menu.h  menusys.cc  menusys.h  robots.cc  screen.cc  screen.h  sound.h  soundsys.cc  soundsys.h  sprites.cc  stars.cc  txtsys.cc  txtsys.h
src/po/: cs.po  de.po  eu.po  fi.po  fr.po  pt.po  ro.po  sv.po
toppler/po/: ro.po
