AC_INIT(toppler.cc)
AM_INIT_AUTOMAKE(toppler, `cat VERSION`)

AM_CONFIG_HEADER(config.h)

AC_PROG_CXX
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
LIS="$LIBS $SDL_LIBS"

AC_CHECK_LIB(SDL_mixer, main,:,AC_MSG_ERROR([*** can not find SDL_mixer]))
LIBS="$LIBS -lSDL_mixer"

AC_OUTPUT(Makefile)
