AC_INIT(toppler.cc)
AM_INIT_AUTOMAKE(toppler, `cat VERSION`)

AC_PROG_CXX
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AC_CHECK_LIB(SDL_mixer, main,
  AC_DEFINE(SDL_MIXER) LIBS="$LIBS -lSDL_mixer",
  AC_MSG_WARN([can not find SDL_mixer tower toppler will have no sound]))

AC_CHECK_FUNCS([scandir],
  :,
  AC_DEFINE(SELF_SCANDIR))

AC_OUTPUT(Makefile)
