AC_INIT(toppler.cc)
TOPPLER_VERSION=`cat VERSION`
AM_INIT_AUTOMAKE(toppler, $TOPPLER_VERSION)
AC_SUBST(TOPPLER_VERSION)
AM_MAINTAINER_MODE

AC_PROG_CXX
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AC_CHECK_LIB(SDL_mixer, main,
  AC_DEFINE(SDL_MIXER) LIBS="$LIBS -lSDL_mixer",
  AC_MSG_WARN([can not find SDL_mixer tower toppler will have no sound]))

AC_CHECK_LIB(z, uncompress,
  LIBS="$LIBS -lz",
  AC_MSG_ERROR([can not find libz toppler needs it to uncompress the data tile]))
  
AC_CONFIG_FILES([Makefile toppler.spec toppler.desktop])

AC_OUTPUT
